squash! Fix well text color on bg-dark

--- a/_assets/less/apps/showroom.less
+++ b/_assets/less/apps/showroom.less
@@ -4,7 +4,7 @@
 .banner {
   margin-top: -@navbar-height;
   max-height: 100%;
-  min-height: 300px;
+  min-height: 500px;
   .rel;
   .img-bg;
   background-size: 100%;
@@ -44,13 +44,17 @@
   .banner-text h1 {
     margin: 0;
   }
+  .banner-heading, .slogan h1 {
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: 0 0 10px #000, 1px 1px 0 #000;
+    font-weight: 700;
+  }
   .slogan {
     position: absolute;
     width: 100%;
     bottom: 120px;
     h1 {
-      color: #fff;
-      text-shadow: 0 0 10px #000, 1px 1px 0 #000;
       font-size: 56px;
     }
     h1, a {
