--- a/_assets/less/template/text.less
+++ b/_assets/less/template/text.less
@@ -1,3 +1,9 @@
+.text-lg {
+    font-size: floor((@font-size-base * 1.15));
+}
+.text-bold {
+    font-weight: 700;
+}
 .text-justify-center {
     text-align: justify;
     text-align-last: center;
